
- Bug #845802: Python crashed when __init__.py is a directory.

Extension modules
-----------------

- Patch #924294: Do no check for AF_INET6 if it is not defined.

- Patch #954115: Properly handle UNC roots in nt.stat.

- Bug #841757: xmlrpclib failed on structs with Unicode keys.

- Bug #954364: inspect.getframeinfo() sometimes produces incorrect traceback
  line numbers

Library
-------

- Bug #679953: zipfile can now handle file sizes over 2 GB.  Previously the
  compressed and uncompressed file sizes were being stored as signed longs
  instead of unsigned as the ZIP spec specifies.
  
- Bug #981530: Fix UnboundLocalError in shutil.rmtree().  This affects
  the documented behavior: the function passed to the onerror()
  handler can now also be os.listdir.

- Bug #754449: threading.Thread will no longer mask exceptions raised during
  interpreter shutdown with another exception caused by attempting to output
  the initial exception.  This fix also includes a backport of rev. 1.41 from
  HEAD.

- Bug #982215: The Back and Next buttons in bdist_wininst installers are now
  disabled during file copy operations.

- Bug #981299: rsync is now a recognized protocol in urlparse that uses a
  "netloc" portion of a URL.

- Patch #975885: Print file name in err msg in quiet mode of compileall.py.

- Bug #919012: shutil.move() raises an exception when you try to move a
  directory into itself.

- Bug #934282: make pydoc.stripid() be case-insensitive.

Build
-----

- Bug #978645: Modules/getpath.c now builds properly under --disable-framework
  build under OS X.

What's New in Python 2.3.4 (final)?
===================================

*Release date: 27-May-2004*

What's New in Python 2.3.4rc1?
==============================

*Release date: 13-May-2004*

Core and builtins
-----------------

- Bug #858016: isinstance() and issubclass() can have their second
  argument be a tuple whose nested depth is capped at the interpreter's